<resources>
    <string name="app_name">AppManillas</string>
    <string name="titulo">App Manillas</string>
    <string name="nombres">Nombres completos</string>
    <string name="apellidos">Apellidos completos</string>
    <string name="personaliza_tu_manilla">Escoge tu manilla (Personalizada)</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo_dije">Tipo de dije</string>
    <string name="tipo_de_moneda">Tipo de moneda</string>
    <string name="cantidad">Cantidad</string>
    <string name="digite_cantidad">Digite cantidad de manillas</string>
    <string name="borrar">Borrar</string>
    <string name="comprar">comprar</string>
    <string name="mensaje_error_uno">Digite sus nombres completos</string>
    <string name="mensaje_error_dos">Digite sus apellidos completos</string>
    <string name="mensaje_error_tres">Digite la cantidad de manillas</string>
    <string-array name="materiales">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dijes">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string-array name="tiposDeDijes">
        <item>@string/oro</item>
        <item>@string/ororosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
    <string-array name="TiposDeMonedas">
        <item>@string/pesos</item>
        <item>@string/dolares</item>
    </string-array>
    <string name="cuero">cuero</string>
    <string name="cuerda">cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="ororosado">Oro rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="pesos">Pesos</string>
    <string name="dolares">Dolares</string>
    <string name="valor_mayor_a_cero">Digite un valor mayor a cero</string>
    <string name="valor_a_pagar">Su valor a pagar es</string>
</resources>
